...
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/registration_il_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/registration_edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:nextFocusDown="@+id/registration_edit_name" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/registration_name_il"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/registration_edit_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name"
                            android:nextFocusDown="@+id/registration_edit_password"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/registration_il_password"
                        android:layout_width="match_parent"
...
                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/registration_edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:nextFocusDown="@+id/registration_edit_password_conf" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/registration_il_password_conf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical|center_horizontal"
                                android:hint="@string/hint_phone_code"
                                android:inputType="phone"
                                android:minWidth="60dp"
                                android:nextFocusDown="@+id/registration_edit_phone" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/registration_il_phone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
...
                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/registration_edit_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_phone"
                                android:inputType="phone"
                                android:nextFocusDown="@+id/registration_btn_ok" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
...
