...
            <android.support.design.widget.TextInputLayout
                android:id="@+id/auth_il_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:nextFocusDown="@+id/auth_edit_password"
                    android:id="@+id/auth_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

...
                android:id="@+id/auth_il_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/auth_il_email">

                <android.support.v7.widget.AppCompatEditText
                    android:nextFocusDown="@+id/auth_btn_registration"
                    android:id="@+id/auth_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/auth_ll_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/auth_il_password"
                android:orientation="horizontal"
                android:paddingTop="@dimen/default_screen_padding">
...
                    style="@style/EntregoBorderlessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_registration" />

                <Button
                    android:id="@+id/auth_btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_login" />

            </LinearLayout>

...
