...
    <string name="app_name">EntreGO</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="ui_error_email">Invalid email</string>
    <string name="ui_error_password">Invalid password</string>
    <string name="ui_forgot_password">Forgot password</string>
    <string name="ui_login">login</string>
    <string name="ui_registration">registration</string>
    <string name="er_default_network_error">Cannot connection to server</string>
    <string name="ui_progress_dialog_title">Loading…</string>
    <string name="ui_loading">Please, wait a second</string>
    <string name="hint_name">Name</string>
    <string name="hint_password_conf">Repeat password</string>
    <string name="hint_phone">Phone number</string>
    <string name="ui_i_have_account">i already have an account</string>
    <string name="hint_phone_code">code</string>
    <string name="grant_permission" translatable="false">OK</string>
    <string name="turn_on">Turn on GPS</string>

    <string name="should_enable_gps">Your GPS is disabled</string>
    <string name="error_passwords_not_equals">Password mismatch</string>
    <string name="ui_success_regist">Almost done! \n To finish you register click the link we send to your email.</string>
    <string name="back_to_auth">back to login</string>
    <string name="ui_success_restore">We sent you an email \n to restore your password</string>
    <string name="title_activity_order">Order</string>
    <string name="font_fontFamily_medium">sans-serif</string>

    <string name="ui_title_home">Home</string>
    <string name="ui_title_account">Account</string>
...
