<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_success_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.entregoya.msngr.ui.registration.SuccessRegistrationActivity">

    <include
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center" />


    <Button
        android:id="@+id/succ_reg_btn_login"
        android:text="@string/back_to_auth"
        style="@style/EntregoSacondaryButton"
        android:layout_below="@id/succ_reg_descr"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
...
